Update with additional sections

--- a/index.html
+++ b/index.html
@@ -19,5 +19,104 @@
         become our utmost art."
       </p>
     </header>
+
+    <main>
+      <h2 class="headingsecond">Types of rooms</h2>
+      <table style="width: 70%; justify-content: center;">
+        
+        <tr  class="firstRow">
+          <th>Type</th>
+          <th>Options</th>
+          <th>Price</th>
+        </tr>
+        <tr class="secondRow">
+          <!-- <tr <img class="image" src="luxury.jpg" alt=""> ></tr> -->
+
+          <th><img class="image" src="luxury.jpg" alt="firstImage" > <span class="image_name"> <br>Luxury</span> </th>
+           <!-- <img class="image" src="luxury.jpg" alt=""> -->
+          <th> <ul>
+            <li>Free Breakfast</li>
+            <br>
+            <li>Free Lunch</li>
+            <br>
+            <li>Free Dinner</li>
+            <br>
+        </ul>
+      </th>
+
+          <th>Per  Night Rs 8000</th>
+        </tr>
+      </table>
+
+      <br>
+      <br>
+      <br>
+
+      <!-- second Table -->
+
+      <table style="width: 70%; justify-content: center;">
+        <tr  class="firstRow">
+          <th>Type</th>
+          <th>Options</th>
+          <th>Price</th>
+        </tr>
+        <tr class="secondRow">
+          <th><img class="image" src="business.jpg" alt="firstImage" > <span class="image_name"> <br>Business</span> </th>
+
+          <th> <ul class="list">
+            <li>Free Access to conference rooms</li>
+            <br>
+            <li>Free Breakfast</li>
+            <br>
+            <li>Free Lunch</li>
+            <br>
+            <li>Free Dinner</li>
+            <br>
+        </ul>
+      </th>
+
+          <th>Per  Night Rs 10000</th>
+        </tr>
+      </table>
+      <br>
+      <br>
+      <br>
+      <!-- third table -->
+
+      <table style="width: 70%; justify-content: center;">
+        <tr  class="firstRow">
+          <th>Type</th>
+          <th>Options</th>
+          <th>Price</th>
+        </tr>
+        <tr class="secondRow">
+          <th><img class="image" src="resort.jpeg" alt="firstImage" > <span class="image_name"><br>Resort</span> </th>
+
+          <th> <ul>
+            <li>Free Pool Access</li>
+            <br>
+            <li>Free Breakfast</li>
+            <br>
+            <li>Free Lunch</li>
+            <br>
+            <li>Free Dinner</li>
+            <br>
+        </ul>
+      </th>
+
+          <th>Per  Night Rs 8000</th>
+        </tr>
+      </table>
+      <br>
+      <br>
+      <br>
+      <p class="booking">Book Now</p>
+    </main>
+
+    <footer>
+      <h3>Â© 2023 Hrishikesh Kelkar's page. All rights reserved.
+        Send us your feedback at help@codechef.com
+      </h3>
+    </footer>
   </body>
 </html>
