Add some address for booking hotel

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <tr class="secondRow">
           <!-- <tr <img class="image" src="luxury.jpg" alt=""> ></tr> -->
 
-          <th><img class="image" src="luxury.jpg" alt="firstImage" > <span class="image_name"> <br>Luxury</span> </th>
+          <th><img class="image" src="luxury.jpg" alt="firstImage" > <span class="image_name"> <br> <a href="https://www.magicbricks.com/luxury-houses-in-varanasi-for-sale-pppfs" class="image_name">Luxury</a></span> </th>
            <!-- <img class="image" src="luxury.jpg" alt=""> -->
           <th> <ul>
             <li>Free Breakfast</li>
@@ -61,8 +61,8 @@
           <th>Price</th>
         </tr>
         <tr class="secondRow">
-          <th><img class="image" src="business.jpg" alt="firstImage" > <span class="image_name"> <br>Business</span> </th>
-
+          <th><img class="image" src="business.jpg" alt="firstImage" > <span class="image_name"> <br> <a href="https://www.makemytrip.com/hotels/greens_suite_business_class_hotel-details-chennai.html" class="image_name">Business</a></span> </th>
+          
           <th> <ul class="list">
             <li>Free Access to conference rooms</li>
             <br>
@@ -90,7 +90,8 @@
           <th>Price</th>
         </tr>
         <tr class="secondRow">
-          <th><img class="image" src="resort.jpeg" alt="firstImage" > <span class="image_name"><br>Resort</span> </th>
+          <th><img class="image" src="resort.jpeg" alt="firstImage" > <span class="image_name"> <br> <a href="https://www.booking.com/index.en-gb.html?aid=2336990;label=en-in-booking-desktop-z8uS*jRfJRedyDC4_iGh9AS652804038422:pl:ta:p1:p2:ac:ap:neg:fi:tikwd-1000294369:lp9302107:li:dec:dm;ws=&gclid=Cj0KCQiAuou6BhDhARIsAIfgrn5PBwc7PYylHTcx0p_PCDah1u9dElenWfKNgXW2Ow0sGzl1vHc8DXEaAr4REALw_wcB" class="image_name">Resort</a></span> </th>
+          
 
           <th> <ul>
             <li>Free Pool Access</li>
